2006.05.27
----------
- started toying around with the species editor

2006.05.23
----------
- changed the way that the accession editor displays when something is wrong
with an entry, the old way using event boxes didn't work like i thought
- moved Problems class into editor.py and added self.problem to 
GenericEditorPresenter and added GenericEditorPresenter.add_problem and 
GenericEditorPresenter.remove_problem
- fix calculation error with accession.dms_to_decimal when the direction is 
west or source, i.e. negative
- don't save the elevation accuracy for the accession if the elevation is None
- make sure that both or neither latitude and longitude are required
- don't save geo accuracy of latitude and longitude are none
- desensitize geoacc_entry if latitude or longitude are None
- desensitize altacc_entry if alt_entry is None
- accession editor gui tweaks for win32
- add dms labels back to accession editor which i accidentaly deleted

2006.05.23
----------
- bumped version to 0.5.1
- accession editor now gives status is accession entered is a duplicate 
accession id
- fixed problem with existing accession notes not showing up in the editor
- now include README, LICENSE and CHANGES in the distribution
- fixed annoying 'feature' where the species entry on the accession editor 
would reset the completions for the species when a species was selected, this
caused weird pauses when the a species was selected

2006.05.22
----------
- interface tweaks for windows
- niced up the donor editor and donation editors a bit
- fix accidental line change in init_species_entry
- fix warning from the donor_combo in the accession editor
- problem with dates in the accession editor
- upgrade SQLObject to SQLObject-0.7.1dev_r1788 bugfix branch for the 
windows bundle
- branch for 0.5.0

2006.05.20
----------
- fixed provenance combos in the accession editor

2006.05.18
----------
- added a main.py to bauble which will start the full application